[gd_scene load_steps=4 format=2]

[ext_resource path="res://libs/gt_entity_mover_3d/gt_entity_mover_3d.gd" type="Script" id=1]
[ext_resource path="res://entities/projectile/__projectile.gd" type="Script" id=2]
[ext_resource path="res://libs/gt_area_3d/gt_area_3d.gd" type="Script" id=3]

[node name="Projectile" type="KinematicBody" groups=[
"projectile",
]]
script = ExtResource( 2 )

[node name="Graphics" type="Spatial" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="main" type="MeshInstance" parent="Graphics"]
__meta__ = {
"_edit_lock_": true
}

[node name="DamageHitbox" type="Area" parent="." groups=[
"projectile",
]]
collision_layer = 32
collision_mask = 64
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape" type="CollisionShape" parent="DamageHitbox"]
__meta__ = {
"_edit_lock_": true
}

[node name="EntityMover" type="Node" parent="."]
script = ExtResource( 1 )
body_path = NodePath("..")
[connection signal="grouped_area_entered" from="DamageHitbox" to="." method="_on_DamageHitbox_grouped_area_entered"]
